syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.gitlab.innom.jses.core";
option java_outer_classname = "SearchingProto";

enum SearchEngine {
    GOOGLE = 0;
    BING = 1;
}

message Dork {
    string plainText = 1;
}

message SessionRequest {
    Dork dork = 1;
    SearchEngine engine = 2;
}

message SearchResponse {
    SearchSession session = 1;
    repeated SearchResult results = 2;

    message SearchResult {
        string title = 1;
        string link = 2;
    }
}

message SearchSession {
    Dork dork = 1;
    Status status = 2;
    SearchEngine engine = 3;
    int32 start = 4;

    enum Status {
        IN_PROGRESS = 0;
        CAPTCHA_PROMPT = 2;
        DONE = 3;
    }
}

service Search {

    rpc CreateSession (SessionRequest) returns (SearchSession) {}

    rpc GetResults (stream SearchSession) returns (stream SearchResponse) {}

}